--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "devDependencies": {
     "@types/three": "^0.181.0",
+    "gltfpack": "^1.0.0",
     "typescript": "~5.9.3",
     "vite": "^7.2.4",
     "vite-plugin-javascript-obfuscator": "^3.1.0"
